--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen@2.1.0",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-geolocation",
+    "cordova.plugins.diagnostic",
+    "cordova-plugin-x-toast"
   ],
   "cordovaPlatforms": [
     "ios",
