--- a/ionic.project
+++ b/ionic.project
@@ -10,5 +10,12 @@
     "www/**/*",
     "!www/lib/**/*",
     "scss/**/*.scss"
+  ],
+  "browsers": [
+    {
+      "platform": "android",
+      "browser": "crosswalk",
+      "version": "12.41.296.5"
+    }
   ]
 }
