--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "locator": "cordova-plugin-googlemaps",
       "id": "plugin.google.maps"
     },
-    "cordova-plugin-app-version"
+    "cordova-plugin-app-version",
+    "cordova-plugin-inappbrowser"
   ],
   "cordovaPlatforms": [
     "android",
