--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vliller",
-  "version": "1.5.1",
-  "description": "vliller : 1 clic, 1 vélo, 1 place !",
+  "version": "1.5.2",
+  "description": "vliller : 1 clic, 1 v\u00e9lo, 1 place !",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
