--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vliller",
   "version": "1.5.7",
-  "description": "vliller : 1 clic, 1 v\u00e9lo, 1 place !",
+  "description": "vliller : 1 clic, 1 vélo, 1 place !",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -12,6 +12,9 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-angular-templatecache": "^1.8.0",
+    "gulp-if": "^2.0.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-useref": "^3.1.2",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
