--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,8 @@
     "aetm-angular-cordova-toast": "0.2.0",
     "aetm-angular-resource": "0.4.1"
   },
-  "version": "1.5.7"
+  "version": "1.5.7",
+  "resolutions": {
+    "angular": "^1.5.3"
+  }
 }
