--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-angular-templatecache": "^1.8.0",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.1",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
