--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "vliller",
   "version": "1.5.7",
   "description": "vliller : 1 clic, 1 vélo, 1 place !",
-  "dependencies": {
+  "devDependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
-  },
-  "devDependencies": {
+    "gulp-rename": "^1.2.0",
     "bower": "^1.3.3",
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-clean-css": "^2.0.13",
