--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vliller",
   "version": "1.5.13",
-  "description": "vliller : 1 clic, 1 v\u00e9lo, 1 place !",
+  "description": "vliller : 1 clic, 1 vélo, 1 place !",
   "devDependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -38,7 +38,8 @@
     "cordova-plugin-app-version",
     "cordova-plugin-inappbrowser",
     "cordova-plugin-x-socialsharing",
-    "cordova-custom-config"
+    "cordova-custom-config",
+    "cordova-plugin-google-analytics"
   ],
   "cordovaPlatforms": [
     "android",
