--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vliller",
   "version": "1.6.1",
-  "description": "vliller : 1 clic, 1 v\u00e9lo, 1 place !",
+  "description": "vliller : 1 clic, 1 vélo, 1 place !",
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp": "^3.5.6",
@@ -39,7 +39,8 @@
     "cordova-plugin-inappbrowser",
     "cordova-plugin-x-socialsharing",
     "cordova-custom-config",
-    "cordova-plugin-google-analytics"
+    "cordova-plugin-google-analytics",
+    "cordova-plugin-network-information"
   ],
   "cordovaPlatforms": [
     "android",
