feat(gps): Request GPS activation if disabled
- Add request location accuracy plugin
- Ask only once to enable the GPS
- Focus on Lille if GPS is disabled

This closes #16 and closes #17

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-custom-config",
     "cordova-plugin-google-analytics",
     "cordova-plugin-network-information",
+    "cordova-plugin-request-location-accuracy",
     "cordova-plugin-device-orientation",
     {
       "variables": {
