--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "alex et manon <bonjour@alexetmanon.com>",
+  "homepage": "http://alexetmanon.com/",
+  "description": "vliller : 1 clic, 1 velo, 1 place !",
   "private": true,
   "scripts": {
     "ionic:build": "ionic-app-scripts build",
@@ -34,11 +35,23 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-app-version",
+    "cordova-plugin-geolocation",
+    "cordova-plugin-google-analytics",
+    "cordova-plugin-network-information",
+    "cordova-plugin-request-location-accuracy",
+    {
+      "variables": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
+        "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY"
+      },
+      "locator": "https://github.com/mapsplugin/cordova-plugin-googlemaps#multiple_maps",
+      "id": "cordova-plugin-googlemaps"
+    }
   ],
   "cordovaPlatforms": [
     "ios",
     "android"
-  ],
-  "description": "vliller2: An Ionic project"
+  ]
 }
