--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "description": "vliller : 1 clic, 1 velo, 1 place !",
   "private": true,
   "scripts": {
-    "ionic:build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build --dev",
     "ionic:serve": "ionic-app-scripts serve"
+  },
+  "config": {
+    "ionic_source_map": "source-map"
   },
   "dependencies": {
     "@angular/common": "2.1.1",
