Fix package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-hello-world",
+  "name": "vliller",
   "author": "alex et manon <bonjour@alexetmanon.com>",
   "homepage": "http://alexetmanon.com/",
   "description": "vliller : 1 clic, 1 velo, 1 place !",
