--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionic-angular": "2.0.1",
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
+    "moment": "^2.17.1",
     "raven-js": "3.10.0",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
