--- a/package.json
+++ b/package.json
@@ -13,24 +13,36 @@
     "ionic_source_map_type": "#inline-source-map"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.0.1",
-    "ionic-native": "2.2.11",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/compiler-cli": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@ionic-native/app-version": "^3.1.0-rc.5",
+    "@ionic-native/core": "^3.1.0-rc.5",
+    "@ionic-native/device": "^3.1.0-rc.5",
+    "@ionic-native/device-orientation": "^3.1.0-rc.5",
+    "@ionic-native/diagnostic": "^3.1.0-rc.5",
+    "@ionic-native/geolocation": "^3.1.0-rc.5",
+    "@ionic-native/google-analytics": "^3.1.0-rc.5",
+    "@ionic-native/in-app-browser": "^3.1.0-rc.5",
+    "@ionic-native/location-accuracy": "^3.1.0-rc.5",
+    "@ionic-native/native-storage": "^3.1.0-rc.5",
+    "@ionic-native/social-sharing": "^3.1.0-rc.5",
+    "@ionic-native/splash-screen": "^3.1.0-rc.5",
+    "@ionic-native/status-bar": "^3.1.0-rc.5",
+    "@ionic/storage": "2.0.0",
+    "ionic-angular": "2.2.0",
     "ionicons": "3.0.0",
-    "moment": "^2.17.1",
-    "raven-js": "3.10.0",
-    "rxjs": "5.0.0-beta.12",
+    "moment": "2.17.1",
+    "raven-js": "3.12.1",
+    "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.6.26"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
