--- a/package.json
+++ b/package.json
@@ -9,40 +9,39 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/compiler-cli": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@ionic-native/app-version": "3.1.0-rc.6",
-    "@ionic-native/core": "3.1.0-rc.6",
-    "@ionic-native/device": "3.1.0-rc.6",
-    "@ionic-native/device-orientation": "3.1.0-rc.6",
-    "@ionic-native/diagnostic": "3.1.0-rc.6",
-    "@ionic-native/geolocation": "3.1.0-rc.6",
-    "@ionic-native/google-analytics": "3.1.0-rc.6",
-    "@ionic-native/in-app-browser": "3.1.0-rc.6",
-    "@ionic-native/location-accuracy": "3.1.0-rc.6",
-    "@ionic-native/native-storage": "3.1.0-rc.6",
-    "@ionic-native/social-sharing": "3.1.0-rc.6",
-    "@ionic-native/splash-screen": "3.1.0-rc.6",
-    "@ionic-native/status-bar": "3.1.0-rc.6",
-    "@ionic/storage": "2.0.0",
-    "ionic-angular": "2.2.0",
+    "@angular/common": "4.1.0",
+    "@angular/compiler": "4.1.0",
+    "@angular/compiler-cli": "4.1.0",
+    "@angular/core": "4.1.0",
+    "@angular/forms": "4.1.0",
+    "@angular/http": "4.1.0",
+    "@angular/platform-browser": "4.1.0",
+    "@angular/platform-browser-dynamic": "4.1.0",
+    "@ionic-native/app-version": "3.6.1",
+    "@ionic-native/core": "3.6.1",
+    "@ionic-native/device": "3.6.1",
+    "@ionic-native/device-orientation": "3.6.1",
+    "@ionic-native/diagnostic": "3.6.1",
+    "@ionic-native/geolocation": "3.6.1",
+    "@ionic-native/google-analytics": "3.6.1",
+    "@ionic-native/in-app-browser": "3.6.1",
+    "@ionic-native/location-accuracy": "3.6.1",
+    "@ionic-native/native-storage": "3.6.1",
+    "@ionic-native/social-sharing": "3.6.1",
+    "@ionic-native/splash-screen": "3.6.1",
+    "@ionic-native/status-bar": "3.6.1",
+    "@ionic/storage": "2.0.1",
+    "ionic-angular": "3.2.1",
     "ionicons": "3.0.0",
-    "moment": "2.17.1",
-    "raven-js": "3.12.1",
-    "rxjs": "5.0.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
+    "moment": "2.18.1",
+    "raven-js": "3.15.0",
+    "rxjs": "5.1.1",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.10"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
-    "typescript": "2.0.9"
+    "@ionic/app-scripts": "1.3.7",
+    "typescript": "2.2.1"
   },
   "cordovaPlatforms": [
     "ios",
