--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.2",
     "cordova-custom-config": "3.1.3",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-device": "1.1.5",
