--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.3",
     "@ngrx/store": "^2.2.2",
+    "@ngrx/store-devtools": "^3.2.4",
     "cordova-custom-config": "3.1.3",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-device": "1.1.5",
