--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "ios",
     "android"
   ],
-  "version": "2.3.2",
+  "version": "2.4.0-alpha",
   "cordova": {
     "plugins": {
       "cordova-custom-config": {},
