--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
+        "@angular/common": "4.4.3",
+        "@angular/compiler": "4.4.3",
+        "@angular/compiler-cli": "4.4.3",
+        "@angular/core": "4.4.3",
+        "@angular/forms": "4.4.3",
+        "@angular/http": "4.4.3",
+        "@angular/platform-browser": "4.4.3",
+        "@angular/platform-browser-dynamic": "4.4.3",
         "@ionic-native/app-version": "3.12.1",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/device": "3.12.1",
@@ -39,7 +39,7 @@
         "cordova-custom-config": "3.1.3",
         "cordova-ios": "~4.4.0",
         "cordova-plugin-app-version": "0.1.9",
-        "cordova-plugin-appsee": "^2.3.65",
+        "cordova-plugin-appsee": "2.3.65",
         "cordova-plugin-device": "1.1.5",
         "cordova-plugin-device-orientation": "1.0.6",
         "cordova-plugin-geolocation": "2.4.2",
@@ -52,18 +52,18 @@
         "cordova-plugin-whitelist": "1.3.2",
         "cordova-plugin-x-socialsharing": "5.1.7",
         "cordova.plugins.diagnostic": "3.4.1",
-        "ionic-angular": "3.6.1",
+        "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "2.2.1",
         "ionicons": "3.0.0",
         "moment": "2.18.1",
         "raven-js": "3.16.0",
-        "rxjs": "5.4.0",
+        "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
         "uk.co.workingedge.phonegap.plugin.launchnavigator": "3.2.2",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.18"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "2.1.4",
+        "@ionic/app-scripts": "3.0.0",
         "typescript": "2.3.4"
     },
     "cordovaPlatforms": [
