--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "cordova-android": "^6.2.3",
         "cordova-custom-config": "3.1.3",
         "cordova-ios": "4.5.2",
+        "cordova-plugin-actionsheet": "2.3.3",
         "cordova-plugin-app-version": "0.1.9",
         "cordova-plugin-appsee": "2.3.65",
         "cordova-plugin-device": "1.1.5",
@@ -49,7 +50,7 @@
         "cordova-plugin-nativestorage": "2.0.2",
         "cordova-plugin-request-location-accuracy": "2.2.0",
         "cordova-plugin-splashscreen": "4.0.2",
-        "cordova-plugin-statusbar": "2.2.2",
+        "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
         "cordova-plugin-whitelist": "1.3.2",
         "cordova-plugin-x-socialsharing": "5.1.7",
         "cordova.plugins.diagnostic": "3.4.1",
@@ -61,8 +62,7 @@
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
         "uk.co.workingedge.phonegap.plugin.launchnavigator": "3.2.2",
-        "zone.js": "0.8.18",
-        "cordova-plugin-actionsheet": "2.3.3"
+        "zone.js": "0.8.18"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
@@ -86,7 +86,6 @@
             "cordova-plugin-nativestorage": {},
             "cordova-plugin-request-location-accuracy": {},
             "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "cordova-plugin-x-socialsharing": {},
             "cordova.plugins.diagnostic": {},
@@ -100,7 +99,8 @@
             },
             "cordova-plugin-appsee": {},
             "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-actionsheet": {}
+            "cordova-plugin-actionsheet": {},
+            "cordova-plugin-statusbar": {}
         },
         "platforms": [
             "android",
