--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@ngrx/core": "1.2.0",
         "@ngrx/effects": "2.0.3",
         "@ngrx/store": "2.2.2",
-        "cordova-android": "^6.2.3",
+        "cordova-android": "6.2.3",
         "cordova-custom-config": "3.1.3",
         "cordova-ios": "4.5.2",
         "cordova-plugin-actionsheet": "2.3.3",
