--- a/package.json
+++ b/package.json
@@ -1,111 +1,115 @@
 {
-    "name": "vliller",
-    "author": "alex et manon <bonjour@alexetmanon.com>",
-    "homepage": "http://alexetmanon.com/",
-    "description": "vliller : 1 clic, 1 velo, 1 place !",
-    "private": true,
-    "scripts": {
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "vliller",
+  "author": "alex et manon <bonjour@alexetmanon.com>",
+  "homepage": "http://alexetmanon.com/",
+  "description": "vliller : 1 clic, 1 velo, 1 place !",
+  "private": true,
+  "scripts": {
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.4.3",
+    "@angular/compiler": "4.4.3",
+    "@angular/compiler-cli": "4.4.3",
+    "@angular/core": "4.4.3",
+    "@angular/forms": "4.4.3",
+    "@angular/http": "4.4.3",
+    "@angular/platform-browser": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.3",
+    "@ionic-native/app-version": "4.3.2",
+    "@ionic-native/core": "4.3.2",
+    "@ionic-native/device": "4.3.2",
+    "@ionic-native/device-orientation": "4.3.2",
+    "@ionic-native/diagnostic": "4.3.2",
+    "@ionic-native/geolocation": "4.3.2",
+    "@ionic-native/google-analytics": "4.3.2",
+    "@ionic-native/in-app-browser": "4.3.2",
+    "@ionic-native/launch-navigator": "4.3.2",
+    "@ionic-native/location-accuracy": "4.3.2",
+    "@ionic-native/native-storage": "4.3.2",
+    "@ionic-native/social-sharing": "4.3.2",
+    "@ionic-native/splash-screen": "4.3.2",
+    "@ionic-native/status-bar": "4.3.2",
+    "@ionic/storage": "2.0.1",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/effects": "2.0.3",
+    "@ngrx/store": "2.2.2",
+    "cordova-android": "6.2.3",
+    "cordova-custom-config": "3.1.3",
+    "cordova-ios": "4.5.2",
+    "cordova-plugin-actionsheet": "2.3.3",
+    "cordova-plugin-app-version": "0.1.9",
+    "cordova-plugin-appsee": "2.3.65",
+    "cordova-plugin-compat": "1.2.0",
+    "cordova-plugin-device": "1.1.6",
+    "cordova-plugin-device-orientation": "1.0.7",
+    "cordova-plugin-dialogs": "1.3.3",
+    "cordova-plugin-geolocation": "2.4.3",
+    "cordova-plugin-googlemaps": "1.4.5",
+    "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+    "cordova-plugin-inappbrowser": "1.7.1",
+    "cordova-plugin-ionic-webview": "1.1.16",
+    "cordova-plugin-nativestorage": "2.2.2",
+    "cordova-plugin-request-location-accuracy": "2.2.2",
+    "cordova-plugin-splashscreen": "4.0.3",
+    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
+    "cordova-plugin-whitelist": "1.3.2",
+    "cordova-plugin-x-socialsharing": "5.1.7",
+    "cordova.plugins.diagnostic": "3.7.1",
+    "ionic-angular": "3.7.1",
+    "ionic-plugin-keyboard": "2.2.1",
+    "ionicons": "3.0.0",
+    "moment": "2.18.1",
+    "raven-js": "3.16.0",
+    "rxjs": "5.4.3",
+    "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.0.7",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.0.0",
+    "typescript": "2.3.4"
+  },
+  "cordovaPlatforms": [
+    "ios",
+    "android"
+  ],
+  "version": "2.5.0",
+  "cordova": {
+    "plugins": {
+      "cordova-custom-config": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-x-socialsharing": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-appsee": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-actionsheet": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
+        "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
+        "NSLOCATIONWHENINUSEUSAGEDESCRIPTION": "Show your location on the map",
+        "NSLOCATIONALWAYSUSAGEDESCRIPTION": "Trace your location on the map"
+      },
+      "cordova-plugin-device": {},
+      "cordova-plugin-device-orientation": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": " "
+      },
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova.plugins.diagnostic": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
+      }
     },
-    "dependencies": {
-        "@angular/common": "4.4.3",
-        "@angular/compiler": "4.4.3",
-        "@angular/compiler-cli": "4.4.3",
-        "@angular/core": "4.4.3",
-        "@angular/forms": "4.4.3",
-        "@angular/http": "4.4.3",
-        "@angular/platform-browser": "4.4.3",
-        "@angular/platform-browser-dynamic": "4.4.3",
-        "@ionic-native/app-version": "4.3.2",
-        "@ionic-native/core": "4.3.2",
-        "@ionic-native/device": "4.3.2",
-        "@ionic-native/device-orientation": "4.3.2",
-        "@ionic-native/diagnostic": "4.3.2",
-        "@ionic-native/geolocation": "4.3.2",
-        "@ionic-native/google-analytics": "4.3.2",
-        "@ionic-native/in-app-browser": "4.3.2",
-        "@ionic-native/launch-navigator": "4.3.2",
-        "@ionic-native/location-accuracy": "4.3.2",
-        "@ionic-native/native-storage": "4.3.2",
-        "@ionic-native/social-sharing": "4.3.2",
-        "@ionic-native/splash-screen": "4.3.2",
-        "@ionic-native/status-bar": "4.3.2",
-        "@ionic/storage": "2.0.1",
-        "@ngrx/core": "1.2.0",
-        "@ngrx/effects": "2.0.3",
-        "@ngrx/store": "2.2.2",
-        "cordova-android": "6.2.3",
-        "cordova-custom-config": "3.1.3",
-        "cordova-ios": "4.5.2",
-        "cordova-plugin-actionsheet": "2.3.3",
-        "cordova-plugin-app-version": "0.1.9",
-        "cordova-plugin-appsee": "2.3.65",
-        "cordova-plugin-device": "1.1.5",
-        "cordova-plugin-device-orientation": "1.0.6",
-        "cordova-plugin-geolocation": "2.4.2",
-        "cordova-plugin-googlemaps": "1.4.5",
-        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
-        "cordova-plugin-inappbrowser": "1.7.0",
-        "cordova-plugin-ionic-webview": "1.1.16",
-        "cordova-plugin-nativestorage": "2.0.2",
-        "cordova-plugin-request-location-accuracy": "2.2.0",
-        "cordova-plugin-splashscreen": "4.0.2",
-        "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
-        "cordova-plugin-whitelist": "1.3.2",
-        "cordova-plugin-x-socialsharing": "5.1.7",
-        "cordova.plugins.diagnostic": "3.4.1",
-        "ionic-angular": "3.7.1",
-        "ionic-plugin-keyboard": "2.2.1",
-        "ionicons": "3.0.0",
-        "moment": "2.18.1",
-        "raven-js": "3.16.0",
-        "rxjs": "5.4.3",
-        "sw-toolbox": "3.6.0",
-        "uk.co.workingedge.phonegap.plugin.launchnavigator": "3.2.2",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.0.0",
-        "typescript": "2.3.4"
-    },
-    "cordovaPlatforms": [
-        "ios",
-        "android"
-    ],
-    "version": "2.5.0",
-    "cordova": {
-        "plugins": {
-            "cordova-custom-config": {},
-            "cordova-plugin-app-version": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-device-orientation": {},
-            "cordova-plugin-geolocation": {
-                "GEOLOCATION_USAGE_DESCRIPTION": "Show your location on the map"
-            },
-            "cordova-plugin-inappbrowser": {},
-            "cordova-plugin-nativestorage": {},
-            "cordova-plugin-request-location-accuracy": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-x-socialsharing": {},
-            "cordova.plugins.diagnostic": {},
-            "ionic-plugin-keyboard": {},
-            "uk.co.workingedge.phonegap.plugin.launchnavigator": {},
-            "cordova-plugin-appsee": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-actionsheet": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
-                "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
-                "NSLOCATIONWHENINUSEUSAGEDESCRIPTION": "Show your location on the map",
-                "NSLOCATIONALWAYSUSAGEDESCRIPTION": "Trace your location on the map"
-            }
-        },
-        "platforms": [
-            "android",
-            "ios"
-        ]
-    }
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
