--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "cordova-plugin-device-orientation": "1.0.7",
     "cordova-plugin-dialogs": "1.3.3",
     "cordova-plugin-geolocation": "2.4.3",
-    "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
+    "cordova-plugin-googlemaps": "2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-inappbrowser": "1.7.1",
     "cordova-plugin-ionic-webview": "1.1.16",
