--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
+  "config": {
+    "ionic_webpack": "./webpack.config.js"
+  },
   "dependencies": {
     "@angular/common": "4.4.4",
     "@angular/compiler": "4.4.4",
