Moves API keys and sensitives config into src/environments/environment.prod.ts file; fix #62

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ UserInterfaceState.xcuserstate
 # release scripts
 build-release.sh
 bump-version.py
+
+# env production
+src/environments/environment.prod.ts
