--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/diagnostic": "4.4.2",
     "@ionic-native/geolocation": "4.4.2",
     "@ionic-native/google-analytics": "4.4.2",
+    "@ionic-native/http": "4.4.2",
     "@ionic-native/in-app-browser": "4.4.2",
     "@ionic-native/launch-navigator": "4.4.2",
     "@ionic-native/location-accuracy": "4.4.2",
@@ -42,11 +43,13 @@
     "cordova-custom-config": "3.1.3",
     "cordova-ios": "4.5.3",
     "cordova-plugin-actionsheet": "2.3.3",
+    "cordova-plugin-advanced-http": "1.8.1",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-compat": "1.2.0",
     "cordova-plugin-device": "1.1.6",
     "cordova-plugin-device-orientation": "1.0.7",
     "cordova-plugin-dialogs": "1.3.3",
+    "cordova-plugin-file": "5.0.0",
     "cordova-plugin-geolocation": "2.4.3",
     "cordova-plugin-googlemaps": "2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
@@ -107,7 +110,8 @@
         "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
-      }
+      },
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "ios",
