--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@ionic-native/in-app-browser": "4.4.2",
     "@ionic-native/launch-navigator": "4.4.2",
     "@ionic-native/location-accuracy": "4.4.2",
-    "@ionic-native/native-storage": "4.4.2",
     "@ionic-native/social-sharing": "4.4.2",
     "@ionic-native/splash-screen": "4.4.2",
     "@ionic-native/status-bar": "4.4.2",
@@ -54,12 +53,12 @@
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-inappbrowser": "1.7.1",
     "cordova-plugin-ionic-webview": "1.1.16",
-    "cordova-plugin-nativestorage": "2.2.2",
     "cordova-plugin-request-location-accuracy": "2.2.2",
     "cordova-plugin-splashscreen": "4.0.3",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "1.3.2",
     "cordova-plugin-x-socialsharing": "5.1.7",
+    "cordova-sqlite-storage": "^2.1.2",
     "cordova.plugins.diagnostic": "3.7.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "2.2.1",
@@ -96,7 +95,6 @@
         "GEOLOCATION_USAGE_DESCRIPTION": " "
       },
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-nativestorage": {},
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-splashscreen": {},
       "cordova.plugins.diagnostic": {},
@@ -110,7 +108,8 @@
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
       },
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios",
