--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "vliller",
-  "app_id": "",
+  "app_id": "1a4d7511",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
