--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cordova-custom-config": "3.1.3",
     "cordova-ios": "4.5.3",
     "cordova-plugin-actionsheet": "2.3.3",
+    "cordova-plugin-add-swift-support": "1.7.1",
     "cordova-plugin-advanced-http": "1.8.1",
     "cordova-plugin-app-version": "0.1.9",
     "cordova-plugin-compat": "1.2.0",
@@ -50,17 +51,18 @@
     "cordova-plugin-dialogs": "1.3.3",
     "cordova-plugin-file": "5.0.0",
     "cordova-plugin-geolocation": "2.4.3",
-    "cordova-plugin-google-analytics": "^1.8.3",
+    "cordova-plugin-google-analytics": "1.8.3",
     "cordova-plugin-googlemaps": "2.1.1",
     "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
     "cordova-plugin-inappbrowser": "1.7.1",
+    "cordova-plugin-ionic": "2.0.4",
     "cordova-plugin-ionic-webview": "1.1.16",
     "cordova-plugin-request-location-accuracy": "2.2.2",
     "cordova-plugin-splashscreen": "4.0.3",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "1.3.2",
     "cordova-plugin-x-socialsharing": "5.1.7",
-    "cordova-sqlite-storage": "^2.1.2",
+    "cordova-sqlite-storage": "2.1.2",
     "cordova.plugins.diagnostic": "3.7.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "2.2.1",
@@ -112,7 +114,14 @@
       },
       "cordova-plugin-advanced-http": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-google-analytics": {}
+      "cordova-plugin-google-analytics": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "1a4d7511",
+        "CHANNEL_NAME": "Production",
+        "UPDATE_METHOD": "background",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "MAX_STORE": "2"
+      }
     },
     "platforms": [
       "ios",
