--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,6 @@ build-release.sh
 bump-version.py
 
 # env production
+src/environments/environment.ts
+src/environments/environment.dev.ts
 src/environments/environment.prod.ts
