--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@ngrx/store": "4.1.1",
     "cordova-android": "6.3.0",
     "cordova-custom-config": "3.1.3",
-    "cordova-ios": "4.5.3",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-actionsheet": "2.3.3",
     "cordova-plugin-add-swift-support": "1.7.1",
     "cordova-plugin-advanced-http": "1.8.1",
@@ -50,8 +50,7 @@
     "cordova-plugin-file": "5.0.0",
     "cordova-plugin-geolocation": "2.4.3",
     "cordova-plugin-google-analytics": "1.8.3",
-    "cordova-plugin-googlemaps": "2.1.1",
-    "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
+    "cordova-plugin-googlemaps": "2.4.6",
     "cordova-plugin-inappbrowser": "1.7.1",
     "cordova-plugin-ionic": "2.0.4",
     "cordova-plugin-ionic-webview": "1.1.16",
@@ -65,11 +64,13 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "2.2.1",
     "ionicons": "3.0.0",
+    "minimist": "1.2.0",
     "moment": "2.18.1",
     "raven-js": "3.20.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.0.7",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -104,12 +105,6 @@
         "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
       },
       "cordova-plugin-compat": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
-        "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
-        "LOCATION_WHEN_IN_USE_DESCRIPTION": "Show your location on the map",
-        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "Trace your location on the map"
-      },
       "cordova-plugin-advanced-http": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-google-analytics": {},
@@ -119,11 +114,19 @@
         "UPDATE_METHOD": "background",
         "UPDATE_API": "https://api.ionicjs.com",
         "MAX_STORE": "2"
+      },
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCwaMhgCXRnhlbBulzNGi5BU0JBLej0FbI",
+        "API_KEY_FOR_IOS": "AIzaSyB7l0BYrnYjYqAY8tiX81XT6j-1iIz-YUY",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
       }
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
