Removes alex et manon mentions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "vliller",
-  "author": "alex et manon <bonjour@alexetmanon.com>",
-  "homepage": "http://alexetmanon.com/",
+  "author": "Alexandre Bonhomme <alex@aqelia.com>",
+  "contributors": [
+    "Alexandre Bonhomme <alex@aqelia.com>",
+    "Manon Verbeke <manon@atelier-jugeote.com>",
+    "Julien Duribreux <julien.duribreux@gmail.com>"
+  ],
+  "homepage": "http://vliller.com/",
   "description": "vliller : 1 clic, 1 velo, 1 place !",
   "private": true,
   "scripts": {
