--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "cordova-plugin-ionic-webview": "1.1.16",
     "cordova-plugin-request-location-accuracy": "2.2.2",
     "cordova-plugin-splashscreen": "4.0.3",
-    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
+    "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.2",
     "cordova-plugin-x-socialsharing": "5.1.7",
     "cordova-sqlite-storage": "2.1.2",
@@ -75,7 +75,7 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.0.7",
-    "xml2js": "^0.4.19",
+    "xml2js": "0.4.19",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -96,7 +96,6 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-actionsheet": {},
-      "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-device-orientation": {},
       "cordova-plugin-geolocation": {
@@ -127,7 +126,8 @@
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
       },
-      "cordova.plugins.diagnostic": {}
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android",
