--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ngrx/effects": "4.1.1",
     "@ngrx/store": "4.1.1",
     "cordova-android": "7.1.4",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "5.0.1",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-advanced-http": "^2.2.0",
